# tugytools

./: .gitignore  LICENSE  README.md  pyproject.toml
jira_utils/: pyproject.toml
jira_utils/jira_utils/: config.yaml  main.py
jira_utils/jira_utils/scripts/: jira_issue_to_github_branch.py  set_up.py  utils.py
ttool/: main.py
ttool/jira_utils/: jira_issue_to_github_branch.py  main.py  set_up.py  utils.py
