[tool.poetry]
name = "ttool"
version = "0.2.2"
description = "Tugys utils tools"
authors = ["IamTugy <tugmica@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
jira = "^3.4.1"
PyYAML = "^6.0"
dacite = "^1.7.0"
inquirer = "^3.1.2"
docopt = "^0.6.2"
typer = "^0.7.0"
requests-toolbelt = "^0.10.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.11"

[tool.poetry.scripts]
ttool = "ttool.main:app"

[project]
name = "ttool"
description = "Tugys utils tools"
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
